# WaveChat

./: CMakeLists.txt
resources/: style.qss
src/: main.cpp
src/chat/: ChatController.cpp  ChatController.h  FileTransfer.cpp  FileTransfer.h  Message.cpp  Message.h
src/tnc/: ITnc.h  KissFrame.cpp  KissFrame.h  KissTnc.cpp  KissTnc.h  PortEnumerator.cpp  PortEnumerator.h
src/ui/: ActiveUsersPanel.cpp  ActiveUsersPanel.h  ChannelList.cpp  ChannelList.h  ChatView.cpp  ChatView.h  EmojiPicker.cpp  EmojiPicker.h  FileTransferDialog.cpp  FileTransferDialog.h  InputBar.cpp  InputBar.h  MainWindow.cpp  MainWindow.h  MessageWidget.cpp  MessageWidget.h  SettingsDialog.cpp  SettingsDialog.h
src/util/: ProtocolLogger.cpp  ProtocolLogger.h
